Reference count error in nsImapService::FetchMessage
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(thunderbird128 fixed)
Tracking | Status | |
---|---|---|
thunderbird128 | --- | fixed |
People
(Reporter: darktrojan, Assigned: darktrojan)
References
Details
(Keywords: memory-leak)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
corey
:
approval-comm-beta+
|
Details | Review |
nsImapService::FetchMessage
has one code path where references to aURL
are added twice, leaving one when the object is finished with and causing it to leak.
Assignee | ||
Comment 1•8 months ago
|
||
Assignee | ||
Updated•8 months ago
|
Pushed by kaie@kuix.de:
https://hg.mozilla.org/comm-central/rev/50a1b0bf9022
Fix double AddRef in nsImapService::FetchMessage. r=mkmelin
Assignee | ||
Comment 3•8 months ago
|
||
Thinking about it some more, the commit message is slightly inaccurate. We're not counting the reference to the pointer at aURL
twice, we're creating a second pointer in the same place, without cleaning up the first one.
Assignee | ||
Comment 4•8 months ago
|
||
Comment on attachment 9408041 [details]
Bug 1903158 - Fix double AddRef in nsImapService::FetchMessage. r=#thunderbird-reviewers
[Approval Request Comment]
Regression caused by (bug #):
User impact if declined: memory leak
Testing completed (on c-c, etc.): this only landed yesterday but we're unlikely to get any feedback on it - can confirm it fixes the leak
Risk to taking this patch (and alternatives if risky): low
Comment 5•8 months ago
|
||
Comment on attachment 9408041 [details]
Bug 1903158 - Fix double AddRef in nsImapService::FetchMessage. r=#thunderbird-reviewers
[Triage Comment]
Approved for beta
Comment 6•8 months ago
|
||
bugherder uplift |
Thunderbird 128.0b3:
https://hg.mozilla.org/releases/comm-beta/rev/11c24029dfaa
Description
•