Bug 1903158 - Fix double AddRef in nsImapService::FetchMessage. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D214051

--HG--
extra : amend_source : c14d897da3cf79122441f6ba002d7ac74a260724